8177311: Denied access when named module accesses unreferences package from the unnamed module
Ensure access to the unnamed module is allowed if the given module reads the unnamed module.

Reviewed-by: jjg